# cargo-template

./: Cargo.toml  README.md  cargo-generate.toml  justfile
