[package]
name = "{{ crate_name }}"
version = "0.1.0"
edition = "2021"

[dependencies]
{% if favorite_crates == true -%}
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
{%- endif %}
